--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "byte-to-file": "^1.0.2",
     "classnames": "^2.3.2",
     "mui": "^0.0.1",
     "node-sass": "^7.0.3",
